--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,12 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+
+* {
+  box-sizing: border-box;
+}
+
 html,
 body {
   padding: 0;
@@ -11,6 +20,3 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
-}
